# RocketFusionTaro

./: .env.example  .gitignore  CLAUDE.md  CLAUDE.zh-CN.md  README.md  README.zh-CN.md  WeChat_MiniProgram_Setup_Guide.md  cookies.txt  test-network-status.html  test_db.sql  test_hash.rs
rocket-taro-server/: .env.example  CONFIGURATION.md  Cargo.toml  Rocket.toml  routes.toml
rocket-taro-server/frontend-new/admin/: index.html
rocket-taro-server/frontend-new/admin/assets/: AdminLayout-DXo8iP_e.js  AdminLayout-Dt1-skGy.css  Dashboard-CbFUiLw1.css  Dashboard-DLkYzUtS.js  Login-C490RPRv.css  Login-CcXXinTU.js  NotFound-BlJdSnpo.css  NotFound-CJkpuMNh.js  Settings-CbADo1u_.js  Settings-DuNf2P3X.css  UserData-BkS01Orf.js  UserData-Ds13NM7k.css  Users-fGCWFGk-.js  Users-xbkp8QHo.css  charts-axzJldHz.js  el-input-v7L0Qt8u.css  index-C1UAl2ua.js  (+4 more)
rocket-taro-server/src/: main.rs
rocket-taro-server/src/auth/: guards.rs  mod.rs
rocket-taro-server/src/cache/: data.rs  mod.rs  redis.rs  session.rs  user.rs
rocket-taro-server/src/config/: mod.rs  route_config.rs
rocket-taro-server/src/database/: auth.rs  mod.rs  wx_auth.rs
rocket-taro-server/src/fairings/: cors.rs
rocket-taro-server/src/models/: auth.rs  business_results.rs  mod.rs  response.rs  route_command.rs  user_data.rs  wx_auth.rs
rocket-taro-server/src/routes/: api.rs  auth.rs  cache.rs  cors.rs  metrics.rs  mock_user_data.rs  mod.rs  user_data.rs
rocket-taro-server/src/use_cases/: auth_use_case.rs  mod.rs  route_command_generator.rs  wx_auth_use_case.rs
rocket-taro-server/src/utils/: mod.rs  wx_crypto.rs
(+289 files in other folders)
