[package]
name = "rocket-taro-server"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
rocket = { version = "=0.5.0", features = ["json", "secrets"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-postgres = { version = "0.7", features = ["with-uuid-1", "with-chrono-0_4"] }
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
bcrypt = "0.15"
rand = "0.8"
base64 = "0.22"
tracing = "0.1"
tracing-subscriber = "0.3"
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1.0"
toml = "0.8"
aes = "0.8"
cbc = { version = "0.1", features = ["alloc"] }
sha1 = "0.10"
hex = "0.4"

[[bin]]
name = "server"
path = "src/main.rs"